--- a/.env
+++ b/.env
@@ -1,1 +1,35 @@
+PORT=3005
+FRONTEND_URL=http://localhost:3005
+
 JWT_SIGNATURE=sjmy7ZN4ZIcSYVFEKsHtQUEb3
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER= root
+DB_PASSWORD= root
+DB_NAME=hpsingh-teams
+
+SKU_NUMBER_LENGTH=5
+SKU_PREFIX=TB
+
+UPLOAD_LOCATION=/public/uploads
+CLIENT_STATIC_FILES=/uploads
+MAX_FILE_SIZE=110240000
+PRODUCT_IMAGE_BASE=product
+CATEGORY_IMAGE_BASE=category
+BANNER_IMAGE_BASE=banner
+
+
+SMTP_HOST= smtp-relay.sendinblue.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=prakash8490@gmail.com
+SMTP_PASS=c5xnKHmb8TaP4yrC
+
+SHIPROKET_USERNAME = prakash.lamppost@gmail.com
+SHIPROKET_PASSWORD='Prak84()'
+
+SHIPROKET_BASE_URL = https://apiv2.shiprocket.in/v1/external
+SHIPPING_LOCATION=Primary
+
+PAYMENT_GATEWAY_SECERTE=ng5SfCPZ9P8xR7ohpqWSwwFs
+PAYMENT_GATEWAY_CLIENT_ID=rzp_test_oYmXw8q11wLoPh
