--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "mysql2": "^3.9.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
